# Communication_Principle_Python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  DEVELOPMENT_GUIDE.md  EXPERIMENT_GUIDE.md  index.md  installation.md  project_structure.md  quick_start.md  roadmap.md
examples/: __init__.py  common.py  spectrum_common.py  template.py
examples/chapter01_signal/: README.md  exp01_generate_rectangle.py  exp02_generate_cosine.py  exp03_generate_sine.py  exp04_generate_impulse.py  exp05_generate_step.py  exp06_signal_scaling.py  exp07_signal_shift.py  exp08_signal_reverse.py  exp09_signal_addition.py  exp10_signal_operations.py  experiment_2_1_1.py
examples/chapter02_spectrum/: README.md  exp01_fft_basic.py  exp02_amplitude_spectrum.py  exp03_phase_spectrum.py  exp04_sampling_frequency.py  exp05_fft_points.py  exp06_zero_padding.py  exp07_single_double_side.py  exp08_phase_spectrum.py  exp09_spectral_leakage.py  exp10_window_functions.py  exp11_fft_length.py  exp12_frequency_effect.py  exp13_phase_effect.py  exp14_amplitude_effect.py  exp15_wo-Tone_Spectrum Analysis.py  exp16_Multi-Tone_Spectrum_Analysis.py  exp17_FFT_Length_Effect.py  exp18_Sampling_Rate_Effect.py  exp19_Signal_Duration_Effect.py  exp20_Signal_Phase_Effect.py  exp21_FFT_Zero_Padding_Effect.py  exp22_Spectrum_Dynamic_Range.py  (+2 more)
tests/: __init__.py  conftest.py  test_analysis.py  test_export.py  test_import.py  test_models.py  test_plotting.py  test_signal.py  test_spectrum.py  test_window.py
(+11 files in other folders)
